--- a/index.html
+++ b/index.html
@@ -44,13 +44,9 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos Lançamentos</h2>
-        <!-- Slider main container -->
-        <div class="swiper">
-            <!-- If we need pagination -->
+        <div class="swiper swiper-novos">
             <div class="swiper-pagination"></div>
-            <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
-                <!-- Slides -->
                 <div class="swiper-slide"><img src="image/ApacheKafka.svg" alt="Livro sobre apache kafka alura books">
                 </div>
                 <div class="swiper-slide"><img src="image/Liderança.svg"
@@ -63,37 +59,37 @@
                 <div class="swiper-slide"><img src="image/Acessibilidade.svg"
                         alt="livro sobre acessibilidade da alura books"></div>
             </div>
-            <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
-
-        <div class="card">
-            <!-- 1º linha-->
-            <div class="card__descricao">
-                <!-- 1º coluna-->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-                </div>
-                <!-- 2º coluna-->
-                <img src="image/angular.svg" class="descrição__imagem" alt="angular">
-            </div>
-
-            <!-- 2º linha-->
-            <div class="card__botoes">
-                <!-- 1º coluna-->
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="image/Favoritos.svg" alt="favoritar livro"></li>
-                    <li class="botoes__item"><img src="image/Sacola.svg" alt="adicionar ao carrinho"></li>
-                </ul>
-                <!-- 2º coluna-->
-                <a href="#" class="botoes__ancora">Saiba Mais</a>
-            </div>
-        </div>
     </section>
 
+    <div class="card">
+        <!-- 1º linha-->
+        <div class="card__descricao">
+            <!-- 1º coluna-->
+            <div class="descricao">
+                <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            </div>
+            <!-- 2º coluna-->
+            <img src="image/angular.svg" class="descrição__imagem" alt="angular">
+        </div>
+
+        <!-- 2º linha-->
+        <div class="card__botoes">
+            <!-- 1º coluna-->
+            <ul class="botoes">
+                <li class="botoes__item"><img src="image/Favoritos.svg" alt="favoritar livro"></li>
+                <li class="botoes__item"><img src="image/Sacola.svg" alt="adicionar ao carrinho"></li>
+            </ul>
+            <!-- 2º coluna-->
+            <a href="#" class="botoes__ancora">Saiba Mais</a>
+        </div>
+    </div>
+
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
@@ -103,6 +99,88 @@
                 type: 'bullets',
             }
         });</script>
+
+    <section class="carrossel">
+        <h2 class="carrossel__titulo">Mais vendidos</h2>
+        <div class="swiper swiper-mais-vendidos">
+            <div class="swiper-pagination"></div>
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="image/ApacheKafka.svg"
+                        alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
+                <div class="swiper-slide"><img src="image/Liderança.svg"
+                        alt="Livro sobre liderança em design da Alura Books"></div>
+                <div class="swiper-slide"><img src="image/Javascript.svg"
+                        alt="Livro sobre Javascript Assertivo da Alura Books"></div>
+                <div class="swiper-slide"><img src="image/Guia Front-end.svg" alt="Livro Guia Front End"></div>
+                <div class="swiper-slide"><img src="image/Portugol.svg" alt="Livro sobre Portugol"></div>
+                <div class="swiper-slide"><img src="image/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
+            </div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+    </section>
+
+    <div class="card">
+        <!-- 1ºlinha -->
+        <div class="card__descricao">
+            <!-- 1º coluna -->
+            <div class="descricao">
+                <img src="image/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+                <h3 class="descricao__titulo">Autora do Mês</h3>
+                <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                <p class="descricao__texto"> Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
+            </div>
+            <!-- 2º coluna-->
+            <img src="image/Perfil-escritora 1.svg" class="descricao__imagem" alt="foto da Juliana">
+        </div>
+
+        <!-- 2º linha -->
+        <div class="card__botoes">
+            <!-- 1º coluna -->
+            <ul class="botoes">
+                <li class="botoes__item"><img src="image/Favoritos.svg" alt="Favoritar Livro"></li>
+                <li class="botoes__item"><img src="image/Sacola.svg" alt="Adicionar ao carrinho"></li>
+            </ul>
+            <!-- 2º coluna-->
+            <a href="#" class="botoes__ancora">Saiba mais</a>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>const swipervendidos = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+                el: '.swiper-pagination',
+                type: 'bullets',
+            }
+        });</script>
+
+    <section class="topicos">
+        <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+        <ul class="topicos__lista">
+            <li class="topicos__item"><a href="#" class="topicos__link">Android</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Marketing Digital</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Agile</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Startups</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">HTML & CSS</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Python</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">oo</a></li>
+            <li class="topicos__item"><a href="#" class="topicos__link">Java</a></li>
+        </ul>
+    </section>
+
+    <section class="contato">
+        <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+        <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+        <input type="email" placeholder="Cadestre seu e-mail" class="contato__email">
+    </section>
+
+    <hr class="hr" />
+
+    <footer class="rodape">
+        <h2 class="rodape__titulo">Grupo Alura</h2>
+    </footer>
 </body>
 
 </html>
