--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="cabecalho">
         <div class="container">
             <input type="checkbox" id="menu" class="container__botao">
-            <label for="menu">
+            <label for="menu" class="container__rotulo">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
@@ -37,7 +37,7 @@
 
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
-            <label for="opcoes-menu">
+            <label for="opcoes-menu" class="opcoes__rotulo">
                 <li class="opcoes__item">Categorias</li>
             </label>
             <ul class="lista-menu">
@@ -53,8 +53,14 @@
         <div class="container">
             <a href="#"><img src="image/Favoritos.svg" alt="Meus favoritos"
                     class="container__imagem container__imagem-transparente"></a>
-            <a href="#"><img src="image/Sacola.svg" alt="Carrinho de Compras" class="container__imagem"></a>
-            <a href="#"><img src="image/Usuário.svg" alt="Meu perfil" class="container__imagem"></a>
+            <a href="#" class="container__link">
+                <img src="image/Sacola.svg" alt="Carrinho de Compras" class="container__imagem">
+                <p class="container__texto">Minha Sacola</p>
+            </a>
+            <a href="#" class="container__link">
+                <img src="image/Usuário.svg" alt="Meu perfil" class="container__imagem">
+                <p class="container__texto">Meu perfil</p>
+            </a>
         </div>
     </header>
     <section class="banner">
@@ -64,52 +70,57 @@
     </section>
     <section class="carrossel">
         <h2 class="carrossel__titulo">Novos Lançamentos</h2>
-        <div class="swiper swiper-novos">
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="image/ApacheKafka.svg" alt="Livro sobre apache kafka alura books">
+        <div class="carrossel__container">
+            <div class="swiper swiper-novos">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="image/ApacheKafka.svg"
+                            alt="Livro sobre apache kafka alura books">
+                    </div>
+                    <div class="swiper-slide"><img src="image/Liderança.svg"
+                            alt="livro sobre liderança em design da alura books"></div>
+                    <div class="swiper-slide"><img src="image/Javascript.svg"
+                            alt="livro sobre javascript assertivo da alura books"></div>
+                    <div class="swiper-slide"><img src="image/Guia Front-end.svg"
+                            alt="livro Guia front end da alura books">
+                    </div>
+                    <div class="swiper-slide"><img src="image/Portugol.svg" alt="livro sobre portugol alura books">
+                    </div>
+                    <div class="swiper-slide"><img src="image/Acessibilidade.svg"
+                            alt="livro sobre acessibilidade da alura books"></div>
                 </div>
-                <div class="swiper-slide"><img src="image/Liderança.svg"
-                        alt="livro sobre liderança em design da alura books"></div>
-                <div class="swiper-slide"><img src="image/Javascript.svg"
-                        alt="livro sobre javascript assertivo da alura books"></div>
-                <div class="swiper-slide"><img src="image/Guia Front-end.svg" alt="livro Guia front end da alura books">
-                </div>
-                <div class="swiper-slide"><img src="image/Portugol.svg" alt="livro sobre portugol alura books"></div>
-                <div class="swiper-slide"><img src="image/Acessibilidade.svg"
-                        alt="livro sobre acessibilidade da alura books"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+
+
+            <div class="card">
+                <!-- 1º linha-->
+                <div class="card__descricao">
+                    <!-- 1º coluna-->
+                    <div class="descricao">
+                        <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                        <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                        <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                    </div>
+                    <!-- 2º coluna-->
+                    <img src="image/angular.svg" class="descrição__imagem" alt="angular">
+                </div>
+
+                <!-- 2º linha-->
+                <div class="card__botoes">
+                    <!-- 1º coluna-->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="image/Favoritos.svg" alt="favoritar livro"></li>
+                        <li class="botoes__item"><img src="image/Sacola.svg" alt="adicionar ao carrinho"></li>
+                    </ul>
+                    <!-- 2º coluna-->
+                    <a href="#" class="botoes__ancora">Saiba Mais</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <div class="card">
-        <!-- 1º linha-->
-        <div class="card__descricao">
-            <!-- 1º coluna-->
-            <div class="descricao">
-                <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
-            </div>
-            <!-- 2º coluna-->
-            <img src="image/angular.svg" class="descrição__imagem" alt="angular">
-        </div>
-
-        <!-- 2º linha-->
-        <div class="card__botoes">
-            <!-- 1º coluna-->
-            <ul class="botoes">
-                <li class="botoes__item"><img src="image/Favoritos.svg" alt="favoritar livro"></li>
-                <li class="botoes__item"><img src="image/Sacola.svg" alt="adicionar ao carrinho"></li>
-            </ul>
-            <!-- 2º coluna-->
-            <a href="#" class="botoes__ancora">Saiba Mais</a>
-        </div>
-    </div>
-
-    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>const swiper = new Swiper('.swiper', {
             spaceBetween: 10,
@@ -122,49 +133,55 @@
 
     <section class="carrossel">
         <h2 class="carrossel__titulo">Mais vendidos</h2>
-        <div class="swiper swiper-mais-vendidos">
-            <div class="swiper-pagination"></div>
-            <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="image/ApacheKafka.svg"
-                        alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
-                <div class="swiper-slide"><img src="image/Liderança.svg"
-                        alt="Livro sobre liderança em design da Alura Books"></div>
-                <div class="swiper-slide"><img src="image/Javascript.svg"
-                        alt="Livro sobre Javascript Assertivo da Alura Books"></div>
-                <div class="swiper-slide"><img src="image/Guia Front-end.svg" alt="Livro Guia Front End"></div>
-                <div class="swiper-slide"><img src="image/Portugol.svg" alt="Livro sobre Portugol"></div>
-                <div class="swiper-slide"><img src="image/Acessibilidade.svg" alt="Livro sobre Acessibilidade"></div>
+        <div class="carrossel__container">
+            <div class="swiper swiper-mais-vendidos">
+                <div class="swiper-pagination"></div>
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide"><img src="image/ApacheKafka.svg"
+                            alt="Livro sobre Apache Kafka e Spring Boot da Alura Books"></div>
+                    <div class="swiper-slide"><img src="image/Liderança.svg"
+                            alt="Livro sobre liderança em design da Alura Books"></div>
+                    <div class="swiper-slide"><img src="image/Javascript.svg"
+                            alt="Livro sobre Javascript Assertivo da Alura Books"></div>
+                    <div class="swiper-slide"><img src="image/Guia Front-end.svg" alt="Livro Guia Front End"></div>
+                    <div class="swiper-slide"><img src="image/Portugol.svg" alt="Livro sobre Portugol"></div>
+                    <div class="swiper-slide"><img src="image/Acessibilidade.svg" alt="Livro sobre Acessibilidade">
+                    </div>
+                </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
             </div>
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+
+            <div class="card">
+                <!-- 1ºlinha -->
+                <div class="card__descricao">
+                    <!-- 1º coluna -->
+                    <div class="descricao">
+                        <img src="image/Estrelinhas.svg" alt="Avaliação 5 estrelas">
+                        <h3 class="descricao__titulo">Autora do Mês</h3>
+                        <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                        <p class="descricao__texto"> Analista de sistemas e escritora, Juliana é especialista em
+                            Front-End.
+                        </p>
+                    </div>
+                    <!-- 2º coluna-->
+                    <img src="image/Perfil-escritora 1.svg" class="descricao__imagem" alt="foto da Juliana">
+                </div>
+
+                <!-- 2º linha -->
+                <div class="card__botoes">
+                    <!-- 1º coluna -->
+                    <ul class="botoes">
+                        <li class="botoes__item"><img src="image/Favoritos.svg" alt="Favoritar Livro"></li>
+                        <li class="botoes__item"><img src="image/Sacola.svg" alt="Adicionar ao carrinho"></li>
+                    </ul>
+                    <!-- 2º coluna-->
+                    <a href="#" class="botoes__ancora">Saiba mais</a>
+                </div>
+            </div>
         </div>
     </section>
 
-    <div class="card">
-        <!-- 1ºlinha -->
-        <div class="card__descricao">
-            <!-- 1º coluna -->
-            <div class="descricao">
-                <img src="image/Estrelinhas.svg" alt="Avaliação 5 estrelas">
-                <h3 class="descricao__titulo">Autora do Mês</h3>
-                <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                <p class="descricao__texto"> Analista de sistemas e escritora, Juliana é especialista em Front-End.</p>
-            </div>
-            <!-- 2º coluna-->
-            <img src="image/Perfil-escritora 1.svg" class="descricao__imagem" alt="foto da Juliana">
-        </div>
-
-        <!-- 2º linha -->
-        <div class="card__botoes">
-            <!-- 1º coluna -->
-            <ul class="botoes">
-                <li class="botoes__item"><img src="image/Favoritos.svg" alt="Favoritar Livro"></li>
-                <li class="botoes__item"><img src="image/Sacola.svg" alt="Adicionar ao carrinho"></li>
-            </ul>
-            <!-- 2º coluna-->
-            <a href="#" class="botoes__ancora">Saiba mais</a>
-        </div>
-    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>const swipervendidos = new Swiper('.swiper', {
