Mudança na logo

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Business</a></li>
                 <li class="lista-menu__item"><a href="#" class="lista-menu__link">Design & UX</a></li>
             </ul>
-            <img src="image/LOGO.svg" alt="Logo da AluraBooks">
+            <img src="image/logo.svg" alt="Logo da AluraBooks">
             <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
         </div>
 
